--- a/ResistantaiMetadataTester/ResistantaiMetadataTester.csproj
+++ b/ResistantaiMetadataTester/ResistantaiMetadataTester.csproj
@@ -44,7 +44,8 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="tungstenlabs.integration.resistantai">
+    <Reference Include="tungstenlabs.integration.resistantai, Version=1.0.0.27622, Culture=neutral, PublicKeyToken=3b2cf567d3ffd915, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\tungstenlabs.integration.resistantai\bin\Debug\tungstenlabs.integration.resistantai.dll</HintPath>
     </Reference>
   </ItemGroup>
