--- a/tungstenlabs.integration.resistantai/tungstenlabs.integration.resistantai.csproj
+++ b/tungstenlabs.integration.resistantai/tungstenlabs.integration.resistantai.csproj
@@ -65,6 +65,7 @@
     <Compile Include="APIHelper.cs" />
     <Compile Include="DocumentAnalysis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerVariableHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
